# preprocessor-cpp

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
etc/: halfedge.py
etc/mesh_files/: donut.mtl
include/: MyTraits.h  get_extraordinary.h  get_limit_point.h  get_patch.h  obj_to_json.h  subdivision.h  to_json.h  utils.h
src/: get_extraordinary.cpp  get_limit_point.cpp  get_patch.cpp  obj_to_json.cpp  subdivision.cpp  to_json.cpp  utils.cpp
